# replication-protos

./: .gitignore  LICENSE  README.md  clang_formater.sh  default.nix  variation.txt
.github/workflows/: clang_format.yml
a2m-single-node/: CMakeLists.txt  a2m_bench.cc  log.h  test_log.cc
alc/: CMakeLists.txt  app_context.h  common.h  main.cc  msg.h
bft-cr/: CMakeLists.txt  common.h  main.cc  msg.h  proto.h
bft-pb/: CMakeLists.txt  common.h  main.cc  msg.h  msg_format.h
cr/: CMakeLists.txt  common.h  main.cc  msg.h
crypto/: .nfs000000000255a40e0000000e  Makefile  bench.cc  hmac_lib.h  rsa_lib.h  sha256.hpp  signed_msg.h
digital_signatures/: Makefile  a.out  enc_lib.h  main.cc  main2.cc  main3.cc  signed_msg.h
network_bench/: CMakeLists.txt  README.md  common.h  main.cc
network_bench/net_sgx/: apis.h
plots/: bench1.py  bench2.py
plots/asplos_submission/: attestation_kernel_util.md  attestation_kernel_util.py
plots/atc_submission/apps_eval/: bft_pb_lat.py  bft_pb_ops.py  bft_pr_throughput_lat.py
plots/atc_submission/hw_eval/: attest_latency.py  time_breakdown.py
plots/atc_submission/net_eval/: net_lat.py  tnic_overheads.py  tnic_speedup.py
plots/hw_eval/: attest_latency.py  lat_tps_net_eval.py  throughput.py  time_breakdown.py  verify_latency.py
plots/net_eval/: lat_tps_RPC_eval.py  tnic_overheads.py
plots/sgx_attest_plots/: normal_stream_300.txt  out_scone.txt  sgx_empty_300.txt  streaming_plot.py
plots/sigcom_submission/apps_eval/: bft_cr_single_plot.py  bft_cr_throughput_lat.py  bft_pb_ops.py  bft_pr_throughput_lat.py
plots/sigcom_submission/hw_eval/: attest_latency.py  time_breakdown.py
plots/sigcom_submission/hw_eval/sgx_attest_plots/: p_plot.py  streaming_plot.py
plots/sigcom_submission/hw_eval/test/: plot.py  test.py  test3.py
plots/sigcom_submission/net_eval/: net_lat.py  net_thr.py  net_thr2.py  tnic_overheads.py  tnic_speedup.py
plots/templates/: bench1.py  bench3.py
rf/: CMakeLists.txt  common.h  main.cc  msg.h
sgx_attest_plots/: normal.txt  normal_stream.txt  sgx_empty_stream.txt  sgx_stream.txt  sgx_stream_300.txt  streaming_plot.py
sha256-example/: Makefile  digest_h.hpp  main.cpp
sha256-example/digital_signatures/: Global.h  Makefile  README.md  attest_server.cc  bench.cc  botan_enc_lib.h  botan_example.cc  client.cc  crystal_clock.h  enc_lib.h  main.cc  normal.txt  normal_stream.txt  normal_stream_300.txt  out_scone.txt  rdtsc.cpp  rdtsc.h  scone_empty.txt  scone_out.txt  sgx_empty_300.txt  sgx_stream.txt  sgx_stream_300.txt  sha256.hpp  signed_msg.h
sha256-example/digital_signatures/net/: shared.cpp  shared.h
test/: CMakeLists.txt  common.h  main.cc  msg.h
tnic_mock_api/: CMakeLists.txt  api.h  test_api.cc
trusted-log/: CMakeLists.txt  common.h  log.h  main.cc  msg.h  msg_format.h  test_log.cc
